# brkraw-mrs

./: CONTRIBUTING.md  NOTICE  README.md  RELEASE_NOTES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yml  release.yml  release_on_merge.yml
scripts/: release_pr.py  release_prep.py  tag_and_push.py  verify_tag_version.py
src/brkraw_mrs/: __init__.py  brkraw_hook.yaml  hook.py  install.py  ui.py
src/brkraw_mrs/docs/: hook.md
src/brkraw_mrs/rules/: __init__.py  press_svs.yaml
src/brkraw_mrs/specs/: __init__.py  metadata_press_svs.yaml
src/brkraw_mrs/transforms/: metadata_transforms.py
tests/: test_import.py  test_nifti_mrs_integration.py
